Major updates for TCU, PW budget, RESU. Added MakeFile and gitignore file

--- a/Application.tex
+++ b/Application.tex
@@ -64,7 +64,6 @@
 %---
 %Section: Mission Overview w/ Subsections Mission Statement and Hypotheses
 	\input{Sections/Introduction.tex}
-	%Scientific Background
 	\section{Background}
 		\input{Astrobiology/IntroAstro.tex}
 		\input{Radiation/IntroRad.tex}
@@ -74,14 +73,13 @@
 		\input{Sections/Hardware.tex}
 		\input{Astrobiology/DesignAstro.tex}
 		\input{Radiation/DesignRad.tex}
+                \input{Electronics/RESUDesign.tex}
 		\input{Sections/HASPInterface.tex}
-	%Thermal Control Plan
 		\input{Sections/ThermalControl.tex}
-	%Power Budget & Weight Budget
 		\input{Sections/PWBudget.tex}
 
 
-%Testing and Simulation
+%Testing
 \input{Sections/Procedures.tex}
 %Decontamination Preflight & Post-flight
 	%Objectives
