--- a/Bib.tex
+++ b/Bib.tex
@@ -5,7 +5,7 @@
 S.A. Garcia Morelos, F. Brooks, S. Oliver, A. Walker, K.D. Portillo, R.B. Masek, D. Mroczek, D. Pena, J. Juarez, A. Cruz, D. Henandez, S. George, D. Pattison, A.L. Renshaw. \textit{Scientific Report for the 2017 UH Team.} SORA 2017 Mission Webpage. \url{http://laspace.lsu.edu/hasp/groups/Payload.php?py=2017&pn=10}.
 
 \bibitem{SORA2}
-S.A. Garcia Morelos, F. Brooks, S. Oliver, A. Walker, K.D. Portillo, R.B. Masek, J. Patel, S. George, D. Pattison, A.L. Renshaw. \textit{Scientific Report for the 2018 UH Team.} Report still under construction.
+  S. A. Garcia Morelos, F. Brooks, S. Oliver, A. Walker, K. D. Portillo, R. B. Masek, J. Patel, S. George, I. Wilson, D. Pattison, P. Gunaratne, and A. L. Renshaw. \textit{SORA 2.0: Stratospheric Organism and Radiation Analyzer}
 
 \bibitem{MiniPIX}
   MiniPIX - Miniaturized Portable USB Photon Counting Camera. (n.d.). Retrieved February 02, 2017, from \url{http://advacam.com/camera/minipix}.
