--- a/Sections/HASPInterface.tex
+++ b/Sections/HASPInterface.tex
@@ -1,69 +1,83 @@
 \section{HASP Interface}
 \label{sec:HaspInterface}
 
-\subsection{Interfacing with HASP: Serial Uplink and Downlink}
-During the duration of our flight the serial uplink commands will be used to configure the collection parameters of the MiniPIX radiation detector. When a command is received from the mission control team, it will be transmitted straight through the DB9 connection into the RPI3 through an RS232 to ttl converter. Then the monitoring script on the RPI3 will verify its content and perform the appropriate action defined in Table~\ref{tab:All-Commands}. The baud rate for serial communication will be set to 4800 bits per second ($bits/sec$). 
+\subsection{Interfacing with HASP: Serial Uplink}
+The SORA 3 payload will not utilize any serial commands. Everything will be configured such that the payload is autonomous.
 
+\subsection{Interfacing with HASP: Serial Downlink}
+For the duration of the flight, the serial downlink will be used to downlink the temperature and other various statistics that will be computed directly on the RP\num{3} as data is collected. It will also be used to downlink messages regarding the status of the payload, the command uplink status and error messages. The data packets will be human readable so they can be analyzed as they are received from HASP. The packets will be delimited by keywords \verb|begin_packet| and \verb|end_packet|, and we will use a simple one character header to differentiate between data packets and message packets. The format of the packets is potentially subject to change but the current design is outlined in Listing~\ref{Downlinks}.
 
-\begin{table}[!ht]
-  \centering
-  \caption{Table of All Uplink Command} 
-  \label{tab:All-Commands}
-  \bigskip
-  \begin{tabular}{c|c|c}
-    \multicolumn{1}{c|}{\bfseries Command} & \multicolumn{1}{c|}{\bfseries HEX Uplink Command} & \multicolumn{1}{c}{\bfseries HEX Uplink Argument}\\
-    \hline
-    \hline
-    Begin Acquisitions & 0x01 & N/A \\ 
-    Stop Acquisitions & 0x02 & N/A \\ 
-    Set Shutter Time & 0x03 & Shutter Time in seconds (1-255) \\ 
-    Change Acquisition Mode & 0x04 & HEX Mode Identifier \\
-    Device Reset & 0x05 & N/A \\
-  \end{tabular}
-  \medskip
-\end{table}
+Listing~\ref{Downlinks} is a sample of our proposed downlink data packet, values are included to the demonstrate expected number of characters but should not be considered expected or actual values. Included first is a format sample to enhance readability in this application which will not be included in the actual downlink data stream.
 
-\begin{table}[!ht]
-  \centering
-  \caption{Table of Acquisition Modes} 
-  \label{tab:Acq-Commands}
-  \bigskip
-  \begin{tabular}{c|c|c}
-    \multicolumn{1}{c|}{\bfseries Acquisition Mode} & \multicolumn{1}{c|}{\bfseries Hex Mode Identifier} & \multicolumn{1}{c}{\bfseries Description} \\
-    \hline
-    \hline
-    Automatic Shutter Time & 0x01 & Shutter time determined automatically based on particle flux \\
-    Fixed Shutter Time & 0x02 & Shutter time fixed to set shutter time \\ 
-    Counting Mode & 0x03 & Configure MiniPIX to measure counts on the detector only \\
-    ToT Mode & 0x04 & Configure MiniPIX to measure time over threshold values \\
-    ToA Mode & 0x05 & Configure MiniPIX to measure time of arrival \\
-  \end{tabular}
-  \medskip
-\end{table}
+\lstset{basicstyle=\small, numbers=left, xleftmargin=2em, frame=tb, label = Downlinks, framexleftmargin=1.5em}
+\begin{lstlisting}[caption = Sample of proposed downlink data packets ID: 15667 - 15669]
+<Format Sample>
+begin_packet
+|ID Number|Raspberry Pi Temp|MiniPix 0 Temp|MiniPix 1 Temp|ISS Temp|ISS Pressure
+|Accelerometer val x|Acc val y|Acc val z
+|Solar Cell Index 00:Temp,FF,Efficiency|Solar Cell Index 01:Temp,FF,Efficiency
+...
+|Solar Cell Index 10:Temp,FF,Efficiency|Solar Cell Index 11:Temp,FF,Efficiency
+|Timestamp|Date|
+end_packet
+<End Format Sample>
+...
+begin_packet
+|15667|55.2|40.5|44.5|25.0|101.35
+|1.00|-1.00|0.00
+|C00:30.50,0.50,0.15|C01:30.50,0.50,0.15|C02:30.50,0.50,0.15|C03:30.50,0.50,0.15
+|C04:30.50,0.50,0.15|C05:30.50,0.50,0.15|C06:30.50,0.50,0.15|C07:30.50,0.50,0.15
+|C08:30.50,0.50,0.15|C09:30.50,0.50,0.15|C10:30.50,0.50,0.15|C11:30.50,0.50,0.15
+|9:29:39|9/4/18|
+end_packet
+begin_packet
+|15668|55.2|40.5|44.5|25.0|101.35
+|1.00|-1.00|0.00
+|C00:30.50,0.50,0.15|C01:30.50,0.50,0.15|C02:30.50,0.50,0.15|C03:30.50,0.50,0.15
+|C04:30.50,0.50,0.15|C05:30.50,0.50,0.15|C06:30.50,0.50,0.15|C07:30.50,0.50,0.15
+|C08:30.50,0.50,0.15|C09:30.50,0.50,0.15|C10:30.50,0.50,0.15|C11:30.50,0.50,0.15
+|9:29:42|9/4/18|
+end_packet
+begin_packet
+|15669|55.2|40.5|44.5|25.0|101.35
+|1.00|-1.00|0.00
+|C00:30.50,0.50,0.15|C01:30.50,0.50,0.15|C02:30.50,0.50,0.15|C03:30.50,0.50,0.15
+|C04:30.50,0.50,0.15|C05:30.50,0.50,0.15|C06:30.50,0.50,0.15|C07:30.50,0.50,0.15
+|C08:30.50,0.50,0.15|C09:30.50,0.50,0.15|C10:30.50,0.50,0.15|C11:30.50,0.50,0.15
+|9:29:45|9/4/18|
+end_packet
+...
+\end{lstlisting}
+\medskip
+
+The first integer represents the ID of the packet. Following the packet ID are temperature readings of the Raspberry Pi and both MiniPix, temperature and pressure within the ISS Module, astrobiology collection arm accelerometer $x, y, z$ values. Then follows the set of values for each of the twelve solar cells, which include the index, temperature, fill factor and efficiency of the cell. Included before the closing delimiter is the timestamp in $HH$:$MM$:$SS$ $MM$/$DD$/$YY$ at which the packet was written.  
+During our previous flights, these data packets were crucial status updates to the state of our payload. We will once again use them for the same purpose to keep a close eye on our payload.
+
+This year the data packets will contain information about the readings from temperatures on crucial devices such as the RP3 and MiniPIX sensors, as well as temperature and pressure inside the ISS module, and accelerometer $x, y, z$ values of the sample collection arm. Additionally packets will contain values regarding the temperature, fill factor, and efficiency of each of the solar cells.  
 
 
 \subsection{Interfacing with HASP: EDAC and DB9 Connections}
 
-The power supply unit (PSU) will use a +30V and ground line from the EDAC connection. The linear actuator of the collection system will use +12V and the collection arm servo motor will take a +6V connection. Other Sensors will be powered through the Arduino taking +5V through the previously described USB connection.  
+The power supply unit (PSU) will use a +30V and ground line from the EDAC connection. The linear actuator of the collection system will use +12V and the collection arm servo motor will take a +6V connection. Other sensors will be powered through the Arduino taking +5V through the previously described USB connection.  
 
-We will use discrete commands in this mission.  Two of the commands will be used to deploy and retract the astrobiology system.  This is only in case of emergency if we notice that the system has not already deployed at the planned altitude as designed. The other two discrete channels will be used to turn on and off the power of RESU in case that we notice an issue.
+We will use discrete commands in this mission. Two of the commands will be used to deploy and retract the astrobiology system. This is only in case of emergency if we notice that the system has not already deployed at the planned altitude as designed. The other two discrete channels will be used to turn on and off RESU in case that we notice an issue.
 
 \begin{table}[!ht]
   \centering
   \caption{Table of all discrete commands to be used during flight} 
   \label{tab:Dis-Commands}
   \bigskip
-  \begin{tabular}{c|c|c|c}
-    \multicolumn{1}{c|}{\bfseries Command} & \multicolumn{1}{c|}{\bfseries Purpose} &  \multicolumn{1}{c|}{\bfseries EDAC Pin} & \multicolumn{1}{c}{\bfseries Description} \\
-      \hline
-      \hline
-      Discrete 1 & Astro. System ON & f & Extends collection arm and activates rotation \\
-      Discrete 2 & Astro. System OFF & n & Stops collection arm rotation and retracts arm \\
-      Discrete 3 & RESU ON & h & Powers up RESU \\
-      Discrete 4 & RESU OFF & p & Shuts down RESU \\
+  \begin{tabular}{cccc}
+    \hline
+    \hline
+    \multicolumn{1}{c}{\bfseries Command} & \multicolumn{1}{c}{\bfseries Purpose} &  \multicolumn{1}{c}{\bfseries EDAC Pin} & \multicolumn{1}{c}{\bfseries Description} \\
+    \hline
+    Discrete 1 & Astro. System ON & f & Extends collection arm and activates rotation \\
+    Discrete 2 & Astro. System OFF & n & Stops collection arm rotation and retracts arm \\
+    Discrete 3 & RESU ON & h & Powers up RESU \\
+    Discrete 4 & RESU OFF & p & Shuts down RESU \\
+    \hline
+    \hline
   \end{tabular}
   \medskip
 \end{table}
-
-\subsection{Interfacing with HASP: Serial Downlink}
-For the duration of the flight the serial downlink will be used to downlink the temperature and other various statistics that will be computed directly on the RP\num{3} as data is collected. It will also be used to downlink messages regarding the status of the payload, the command uplink status and error messages. The data packets will be human readable so they can be analyzed directly as they are received from HASP. The packets will be delimited by keywords \verb|begin_packet| and \verb|end_packet| and we will use a simple one character header to differentiate between data packets and message packets. The format of the packets is potentially subject to change but the current design is outlined in listing~\ref{Downlinks} .
