--- a/Sections/PWBudget.tex
+++ b/Sections/PWBudget.tex
@@ -13,17 +13,15 @@
     \multicolumn{1}{c}{\bfseries Component} & \multicolumn{1}{c}{\bfseries Voltage (VDC)} &  \multicolumn{1}{c}{\bfseries Current (mA)} & \multicolumn{1}{c}{\bfseries Duty Cycle (\%)} & \multicolumn{1}{c}{\bfseries Power (mW)} & \multicolumn{1}{c}{\bfseries Mass (g)} \\
     \hline
     30 to 12 V DC/DC Converter & 30 & 1500 & 100 & 45000 & 10 \\
-    RPi + MiniPIX & 5 & 710 & 100 & 3550 & 25.2 + RPi \\    
-    ISS Module Heater 1 with driver & & & & & \\
+    RP3 + (2)MiniPIX & 5 & 1210 & 100 & 6050 & 92.4 \\    
     Linear Actuator & 12 & 650 & 20 & 7800 & 84 \\
-    Servo Motor & 6 & 550 & & 3300 & 39 \\
-    Gyroscope & 5 & 3.9 & 100 & 19.5 & \\
-    Temperature Sensor 1 & 5 & 0.09 & 100 & 0.45 & 0.02 \\
-    Temperature Sensor 2 & 5 & 0.09 & 100 & 0.45 & 0.02 \\
-    Temperature Sensor 3 & 5 & 0.09 & 100 & 0.45 & 0.02 \\
+    Servo Motor & 6 & 550 & 100 & 3300 & 39 \\
+    Accelerometer & 5 & 3.9 & 100 & 19.5 & \\
+    (16)Thermistors & 5 & 4 & 100 & 20 & \\
     Altitude/Pressure Sensor & 3.6 & 1.4 & 100 & 5.04 & \\
     Low Pressure Pressure Sensor & 5 & 7 & 100 & 35 & \\   
-    
+
+    %Temperature Sensor 1 & 5 & 0.09 & 100 & 0.45 & 0.02 \\    
     %Polulu Driver & 30 & 1000 & CAL & CAL & 1 \\ \hline  
     %Pressure \& Altitude Sensor 1 & 3.3 & 1.4 & 100 & 4.62 & 0.005 \\ \hline
     %Real Time Clock (RTC) & 3.3 & 0 & 100 & 0.00198 & 0.005 \\ \hline
