Updated references. Added .gitignore

--- a/Bib.tex
+++ b/Bib.tex
@@ -27,6 +27,12 @@ S.A. Garcia Morelos, F. Brooks, S. Oliver, A. Walker, K.D. Portillo, R.B. Masek,
 
 \bibitem{NASA HRP}
   https://www.nasa.gov/hrp
+
+\bibitem{NASAShielding}
+  National Research Council. 1997. \textit{Protecting the Space Station from Meteoroids and Orbital Debris}. Washington, DC: The National Academies Press. \url{https://doi.org/10.17226/5532}.
+
+\bibitem{NASAPP}
+  Christiansen, E. L., Lear, D. M. (2012). Micrometeoroid and Orbital Debris Environment \& Hypervelocity Shields [PowerPoint slides]. Retrieved from \url{https://ntrs.nasa.gov/archive/nasa/casi.ntrs.nasa.gov/20120002584.pdf}.
   
 \bibitem{Canales}
  Canales D. C. and Ehteshami A., \textit{An attempt to sample atmospheric bacteria}, Houston, TX, 2015, January 11.
