--- a/Radiation/IntroRad.tex
+++ b/Radiation/IntroRad.tex
@@ -19,7 +19,13 @@ Additionaly, the measurements outside of the structure will give information as 
 
 
 \subsubsection{Organic Solar Cells}
-<<TAYLOR: Include some of the history/theory/emerging importance of organic solar cells as well as what we will be observing with them in the stratosphere>>
+	Harvesting energy in space is a huge concern, but with a constant supply of photons streaming from the sun, solar power is an obvious, and convenient choice for energy generation. When choosing a system to gather solar energy, one of the largest concerns is getting the system out out to space. The largest economic factor here is weight, which is why organic solar cells (OSC) are an active area of research for space energy generation. Being extremely light weight, the initial cost of transportation is drastically less than traditional solar cells, and with a high degree of flexibility, OSCs offer a larger surface area for application. 
+	
+	OSCs use earth abundant, carbon based semiconductors, such as conjugated polymers(as donors) and fullerene derivatives(as acceptors). Where as in mono-crystalline solar cells the valance and conduction bands are used to determine the energy band gap, OSCs model the difference between the highest occupied molecular orbit(HOMO) and the lowest unoccupied molecular orbit(LUMO) as equivalent to this energy band gap. When donor(D) and acceptor(A) layers meet, their Fermi levels match up and band bending occurs, which creates a small electric field, or built in potential (Vbi). Charge generation occurs when excitons, an electron/hole pair bound together by the Coulomb force, are generated in the donor material. This exciton will travel towards to D-A interface, where the aforementioned Vbi will seperate the exciton into free charges given sufficient conditions.  Exciton transportation inside of the bulk is hindered to 5-50nm before recombination occurs depending on material and structure, while the average thickness of an OSC is 50-100nm, thus the architecture of the active layer is of much importance. Instead of using a bi-layer of n-type and p-type semiconductors, OSCs use the bulk hetero-junction (BHJ), which is a blend with A-D regions that are within the estimated diffusion length.  
+	
+	
+
+	Space transport involves high doses of radiation, large fluctuations of temperatures, and extreme vacuum conditions. The need to study the effects of a space like environment on organic electronic devices is paramount as advances in the organic semiconductor field continue and space exploration becomes more standard. The effect of cosmic ray bombardment on perovskite cells is of particular interest as the crystal morphology may be affected. 
 
 
 %\subsubsection{Solar Radiation}
