Wrote testing, integration, and flight procedures. Added coordinator emails and degrees.

--- a/Sections/Management.tex
+++ b/Sections/Management.tex
@@ -17,17 +17,18 @@
 \vspace{.1in}
 
 \emph{Team Coordinators:}\par
+\hspace{1cm} \textbf{Jimish Patel}\par
+\hspace{1cm} Physics B.S., Spring 2020\par
+\hspace{1cm} \url{jimishpatel75@gmail.com}\par
+\vspace{.05in}
 \hspace{1cm} \textbf{Michael Butowicz}\par
-\hspace{1cm}  NA \par
-\hspace{1cm} \url{NA}\par
+\hspace{1cm}  Computer Science B.S., Fall 2020\par
+\hspace{1cm} \url{mbutowicz@gmail.com}\par
 \vspace{.05in}
 \hspace{1cm} \textbf{Taylor Hill}\par
-\hspace{1cm} NA, NA\par
-\hspace{1cm} \url{NA}\par
-\vspace{.05in}
-\hspace{1cm} \textbf{Jimish Patel}\par
-\hspace{1cm} Physics B.S., Sping 2020\par
-\hspace{1cm} \url{NA}\par
+\hspace{1cm} Physics B.S., Spring 2019\par
+\hspace{1cm} \url{tdhill92@gmail.com}\par
+
 \begin{figure}[!h]
   \begin{center}
     \includegraphics[width=1\textwidth]{./Figures/TeamRoleTree.pdf}
