--- a/Sections/ThermalControl.tex
+++ b/Sections/ThermalControl.tex
@@ -6,4 +6,4 @@ Based on our previous missions~\cite{SORA1}\cite{SORA2}, we have designed a ther
 
 The temperature of all high-performance devices will be downlinked and monitored by the mission control team. In the case of a device overheating, said device will be shut down until it is safe to resume operations. The RP3 will be considered overheating if the temperature exceeds \SI{85}{\celsius}. A MiniPIX will be considered overheating if the device temperature exceeds \SI{80}{\celsius}.
 
-In attempt to prevent overheating, each device will be configured with an individual metal heat sink. The RP3's processor will be equipped with a heat sink designed specifically for that device. Using the same technique used on the previous mission, each of the MiniPIX devices will be fixed to a plate of aluminum. 
+In attempt to prevent overheating, each device will be configured with an individual metal heat sink. The RP3's processor will be equipped with a heat sink designed specifically for that device. Using the same technique used on the previous mission, each of the MiniPIX devices will be fixed to a plate of aluminum. For the MiniPIX contained in the pressurized environment, an aluminum heat pipe will be used to distribute heat from the device to the outer aluminum shell. 
