--- a/Sections/Procedures.tex
+++ b/Sections/Procedures.tex
@@ -13,47 +13,30 @@ The payload will be built within the confines of a class 100 clean hood that is 
 \subsubsection{Sterilization Post flight}
 Before payload descent, we will shut off all of our systesms. By powering down all the systems, the solenoids will seal the sampling container. Each team member involved in the recovery process will wear new latex gloves; cleaned with 91 \% isopropyl alcohol. The payload will remain sealed until decontamination procedures are complete and the sampling containers are ready for processing. The payload will be disassembled under class 100 conditions and all tools used during this procedure will be either heat or 91 \% isopropyl alcohol sterilized. Once in the clean room, the same procedures that were performed preflight will be performed post flight. The sampling box will then be packaged in a heat sterilized plastic outer container and transported back to the University of Houston for analysis.
 
-%\subsubsection{In Flight Failure:}
-%If for some reason the sampling system fails, commands can be uplinked to the control system that
-%allow for subsystem resets. If the temperature falls below component operating conditions, the heater associated to that particular subsystem will automatically turn on until operating conditions are restored and the system is operational. Although unlikely, if downlinked data shows extreme overheating or any sort of abnormality that could result in damage to HASP or other payloads, we will shut down all systems through the discrete command provided by HASP.
 
-\subsection{Testing}
+\subsection{Testing and Integration}
 
-\subsubsection{Vacuum Chamber}
-There will be an initial testing phase that will include each component that will draw or supply power/current. During this phase, each component will receive power and transmit data to ensure proper functionality. Communication will be tested by sending commands to the system and receiving status updates in return. In addition to testing proper functioning of the pumps and solenoid valves, the clean box will be tested to ensure sanitation procedures are successful and verify that the materials inside the bottles within the clean box remain unfrozen. This initial phase is to be followed by an integration of components into their respective subsystems. Each subsystem will be tested to ensure functionality within itself and confirm actual power consumption and current drawn at various voltages. The subsystems will be thermally vacuum tested to determine thermal stability and general functionality at each phase of the flight (ascension, float, descent) for a total of 24 hours. Finally, a complete integration will complete the payload. The complete integration will be tested in the same manner as the subsystems to establish a fully functioning payload. Once this final phase is complete, the payload will be sealed after it has undergone sanitation procedures.
-
-\subsection{Integration Procedures}
-\subsubsection{Houston Integration}
-For Astrobiology, we will try to determine the airflow through the system under normal ground level conditions and float conditions with as much precision as possible.  We will run two pumps while monitoring their power consumption. The pumps, along with the temperature, humidity and pressure sensors and tubing will undergo extensive thermal vacuum testing in the range of \SIrange{-3}{25}{\celsius}, with a pressure range of \SIrange{0}{10}{\milli\bar}. The vacuum chamber tests will run for approximately \SIrange{8}{15}{\hour}, to replicate conditions from the previous flights. In the past~\cite{SORA}, the pumps were subjected to a temperature range of \SIrange{-30}{50}{\celsius} during integration and ran again for \SI{8}{\hour} afterwards and prior to flight. The pumps have proven to function in extreme environments without an issues. 
-
-There will be several clean boxes used during the testing procedures to ensure stability of the materials and agarose solution under flight conditions. The multiple boxes will also allow for contamination and leak testing. Once the aforementioned astrobiology subsystem has been assembled, the sealed and sanitized clean box will be connected via the tubing from the pumps. This new assembly will be vacuum chamber tested under the same pressure and temperature conditions that are to be expected throughout the flight. 
-
-When the astrobiology assembly and the environmental subsystem have undergone separate and complete flight simulations in the vacuum chamber, the two will be combined to form a more complete assembly. This new assembly will then be vacuum chamber tested. 
-
-In near vacuum environments, electrical devices under continuous operation tend to build up heat as there is practically no thermal convection. Based off of the results from the last mission, we have decided the aluminum heat sink is the best option~\cite{SORA}. Once the MiniPIX has been tested separately it will be added to the assembly to make a final assembly that will be vacuum tested. The MiniPIX will be integrated with the RP3 via USB. Using the Pixet software, we will test known sources to measure the energy levels and particle flux to ensure that the MiniPIX has been properly calibrated.
-    
-%Our detailed preliminary testing plan is described in \textbf{appendix B (make sure this stays consistent)}.  
+\subsubsection{Vacuum Chamber Testing}
+Each subsystem will be tested in-house with a vacuum chamber.
+This testing phase will be used to ensure that each component of each subsystem performs as it should while in near-vacuum conditions, so if any problem arises it can be understood and fixed.
+The ISS module structure will be tested individually with a pressure sensor to ensure that the module remains pressurized for a full \num{24} hour period which will ensure that the welded joints and the hermetic seal are sufficient.
+The high-performance devices (i.e. the MiniPIXs and the RP3) will be thermally tested by performing and collecting data for a full \num{24} hour period.
+Next, the full electronics system will be tested to ensure the astrobiology components correctly respond to the changing pressure.
+To conclude vacuum testing, all subsytems will be fully integrated into one assembly which will then be tested in near-vacuum conditions for a \num{24} hour period.
+The complete system will be considered optimal when both MiniPIX devices are ensured not to overheat, the RP3 is shown not to overheat, the astrobiology system deploys at the proper air pressure, and the astrobiology system seals at the proper air pressure all while remaining below the amperage limit of \SI{2.5}{\ampere}.
 
 \subsubsection{HASP Integration}
-The integration team, which consists of all team members to date, will arrive at the integration site approximately \numrange{1}{2} days before the scheduled tested. The first step of the integration will be to attach the payload to the HASP plate. Following attachment, it will be verified that the payload receives power from the HASP EDAC connector and is successfully sending and receiving operation commands from the ground. Our results for bacteria collection rely heavily on a low contamination risk setting pre and post flight, therefore, we think it best that the sampling system remains powered down until float altitude has been reached. We can offer a proxy for the integration testing in the form of a separate actuator and pump to confirm that commands are being received from the ground. Once everything is determined to be in working order the entire system will be shut down in preparation for the actual flight.
+During HASP integration, the payload will be tested for proper connection to the HASP systems and be thermally testing at least once more.
+The integration team will verify that the EDAC connection distributes power as necessary as well as sends the correct discrete commands at will.
+The astrobiology system will be tested without the membrane filters so as to conserve resources.
+Any necessary tweaks or changes will be made to properly integrate our payload with the HASP systems.
+The system will be considered integrated once the payload appropriately receives power and commands and completes thermal testing.
 
-\subsubsection{Post Integration Operations}
-
-After integration, the astrobiology system will be prepared for flight.  Any issues or improvements needed will be done in the months before flight. For the rest of the systems, we will do a final check and have the payload ready for shipment.  The payload will be shipped in a crate to New Mexico accordingly.
+\subsubsection{Post-Integration Operations}
+Once integration is complete, the subsystems will undergo one final check, and the astrobiology system will be sterilized and fitted with the membrane filters. If funds can support it, we will send a small team to New Mexico to oversee the flight operations.
 
 \subsection{Flight Operations}
-Our systems are all automated, therefore the only flight operations to consider are to turn on the pumps once float conditions are achieved. The payload will be monitored via analog and serial  downlinking to determine the appropriate time to turn on all systems. 
+Each system is autonomous, however, a mission control team will monitor the downlinked data to determine the system status. If the astrobiology system fails to automatically respond or the electronics systems needs a reboot, the corresponding discrete command will be sent.
 
 \subsection{Post-Flight Operations}
-Once the flight is complete the team will be on site to collect the astrobiology subsystem assembly, the radiation subsystem assembly, and the second RP3 responsible for storing all environmental data. Everything else can be shipped back to our facilities at a later date.  
-
-
-
-%\begin{figure}[!htb]
-%\begin{center}
-%\includegraphics[width=0.5\textwidth]{./Figures/Test.jpg}
-%\caption{This is a test figure.
-%}
-%\label{fig:Test} 
-%\end{center}
-%\end{figure}
+If a team is onsite in New Mexico, the data storage systems will be collected and safely stored. Otherwise, the payload will be shipped to our facilities.
