--- a/Sections/Procedures.tex
+++ b/Sections/Procedures.tex
@@ -36,7 +36,7 @@ The system will be considered integrated once the payload appropriately receives
 Once integration is complete, the subsystems will undergo one final check, and the astrobiology system will be sterilized and fitted with the membrane filters. If funds can support it, we will send a small team to New Mexico to oversee the flight operations.
 
 \subsection{Flight Operations}
-Each system is autonomous, however, a mission control team will monitor the downlinked data to determine the system status. If the astrobiology system fails to automatically respond or the electronics systems needs a reboot, the corresponding discrete command will be sent.
+Each system is autonomous, however, a mission control team will monitor the downlinked data to determine the status of each subsystem. If the astrobiology system fails to automatically respond or the electronics systems needs a reboot, the corresponding discrete command will be sent.
 
 \subsection{Post-Flight Operations}
 If a team is onsite in New Mexico, the data storage systems will be collected and safely stored. Otherwise, the payload will be shipped to our facilities.
