--- a/Sections/Authors.tex
+++ b/Sections/Authors.tex
@@ -7,7 +7,7 @@
 %--- Add authors in the order they should appear
 \author{R.~Masek}\affiliation{\Physics}
 \author{J.~Patel}\affiliation{\Physics}
-\author{M.~Butowicz}\affiliation{\Electrical}
+\author{M.~Butowicz}\affiliation{\CS}
 \author{T.~Hill}\affiliation{\Physics}
 \author{S.~George}\affiliation{\Physics}
 \author{D.~Pattison}\affiliation{\Biology}
