--- a/Application.tex
+++ b/Application.tex
@@ -74,7 +74,7 @@
     \input{Sections/Hardware.tex}
     \input{Astrobiology/DesignAstro.tex}
     \input{Radiation/DesignRad.tex}
-    \input{Electronics/RESUDesign.tex}
+    \input{Electronics/SOCRATESDesign.tex}
 
 \input{Sections/HASPInterface.tex}
 \input{Sections/ThermalControl.tex}
