Replaced RESU with SOCRATES
Replaced mentions of RESU with SOCRATES

--- a/Sections/Management.tex
+++ b/Sections/Management.tex
@@ -113,12 +113,12 @@
 \begin{tabular}{|c|l|}
 \hline
 \textbf{Month of 2018} & \multicolumn{1}{c|}{\textbf{Description of Work}} \\ \hline
-\textbf{January} & \begin{tabular}[c]{@{}l@{}} * Secure funding \\ * Create and finish budget for mission \\ * Make inventory of hardware \\ * Procure hardware/software \\ * Start designs of SORA 2.0 \\ * Update RESU \\ * Upgrade vacuum chamber \\ * Recruit new members \end{tabular} \\ \hline
+\textbf{January} & \begin{tabular}[c]{@{}l@{}} * Secure funding \\ * Create and finish budget for mission \\ * Make inventory of hardware \\ * Procure hardware/software \\ * Start designs of SORA 2.0 \\ * Update SOCRATES \\ * Upgrade vacuum chamber \\ * Recruit new members \end{tabular} \\ \hline
 \textbf{February} & \begin{tabular}[c]{@{}l@{}}
-* Continue with work from January.  Funding must be secured by end of March.\\ * Have finished list of inventory\\ * Finalize upgrades to vacuum chamber\\ * Continue recruitment and finalize by end of month.\\ * Continue design work of SORA 2.0\\ * Finish RESU upgrade\end{tabular} \\ \hline
+* Continue with work from January.  Funding must be secured by end of March.\\ * Have finished list of inventory\\ * Finalize upgrades to vacuum chamber\\ * Continue recruitment and finalize by end of month.\\ * Continue design work of SORA 2.0\\ * Finish SOCRATES upgrade\end{tabular} \\ \hline
 \textbf{March} & \begin{tabular}[c]{@{}l@{}}Obtain funding by the end of this month.  Finish all tasks from the previous two months and transition into building phase.\\ * Have all hardware/software orders in by the end of the month\\ * Begin PSIP, have draft by end of the month\end{tabular} \\ \hline
-\textbf{April} & \begin{tabular}[c]{@{}l@{}}* Order remaining items if needed\\ * Finish PSIP by April 25th\\ * RESU and MiniPIX integration and testing\\ * Upgrade clean room and prepare for astrobiology work\end{tabular} \\ \hline
-\textbf{May} & \begin{tabular}[c]{@{}l@{}}* PSIP and FLOP development\\ * Finalize integration of RESU and hardware\\ * Continue working on astrobiology upgrades\end{tabular} \\ \hline
+\textbf{April} & \begin{tabular}[c]{@{}l@{}}* Order remaining items if needed\\ * Finish PSIP by April 25th\\ * SOCRATES and MiniPIX integration and testing\\ * Upgrade clean room and prepare for astrobiology work\end{tabular} \\ \hline
+\textbf{May} & \begin{tabular}[c]{@{}l@{}}* PSIP and FLOP development\\ * Finalize integration of SOCRATES and hardware\\ * Continue working on astrobiology upgrades\end{tabular} \\ \hline
 \textbf{June} & \begin{tabular}[c]{@{}l@{}}Final PSIP due June 27th\\ *Finalize astrobiology upgrades and ready for integration\\ * Testing in lab\end{tabular} \\ \hline
 \textbf{July} & \begin{tabular}[c]{@{}l@{}}Final FLOP due July 31st\\ * Make changes from testing and continue tests\end{tabular} \\ \hline
 \textbf{August} & \begin{tabular}[c]{@{}l@{}}Payload Integration (August 4 - 8)\\ *Have all payload work done and ready for flight\end{tabular} \\ \hline
