--- a/Radiation/IntroRad.tex
+++ b/Radiation/IntroRad.tex
@@ -19,13 +19,48 @@ Additionaly, the measurements outside of the structure will give information as 
 
 
 \subsubsection{Organic Solar Cells}
-	Harvesting energy in space is a huge concern, but with a constant supply of photons streaming from the sun, solar power is an obvious, and convenient choice for energy generation. When choosing a system to gather solar energy, one of the largest concerns is getting the system out out to space. The largest economic factor here is weight, which is why organic solar cells (OSC) are an active area of research for space energy generation. Being extremely light weight, the initial cost of transportation is drastically less than traditional solar cells, and with a high degree of flexibility, OSCs offer a larger surface area for application. 
+
+	\subsection{Introduction}
+	Photovoltaic devices has been a staple in space energy harvesting since the launch of Vangaurd 1 in 1958. Since then, silicon, gallium arsenide, indium phosphide, cadmium telluride, and other III-IV systems have played the key roles[]. When choosing a system to gather solar energy, the only economic factors are the initial cost of the arrays, and the cost of transporting the system to orbit. To reduce this cost, we want solar cells with the highest specific power, which is defined as the W/kg. Recent studies have shown organic solar cells (OSC) with a specific powers of 10 W/g, which is why OSCs are an active area of research for space energy generation[1]. Organic solar cells are thin film, light weight, flexible, and can be produced using roll to roll printing, making it ideal for space applications. In this experiment, we are exploring the effects of stratospheric conditions on organic solar cells, with a particular focus on the effects of cosmic ray bombardment in conjunction with the miniPIX system, as well as to investigate the radiation hardness of different types of organic solar cells and demonstrate their reliability upon entry and exit of the stratosphere. In the following sections we will explain the basic workings of an OSC and explain some of the benifits and hinderences of a space like environment on the OSC, then explain the methodology of our experiment.
+	
+	\subsection{Working principals}
+
 	
 	OSCs use earth abundant, carbon based semiconductors, such as conjugated polymers(as donors) and fullerene derivatives(as acceptors). Where as in mono-crystalline solar cells the valance and conduction bands are used to determine the energy band gap, OSCs model the difference between the highest occupied molecular orbit(HOMO) and the lowest unoccupied molecular orbit(LUMO) as equivalent to this energy band gap. When donor(D) and acceptor(A) layers meet, their Fermi levels match up and band bending occurs, which creates a small electric field, or built in potential (Vbi). Charge generation occurs when excitons, an electron/hole pair bound together by the Coulomb force, are generated in the donor material. This exciton will travel towards to D-A interface, where the aforementioned Vbi will seperate the exciton into free charges given sufficient conditions.  Exciton transportation inside of the bulk is hindered to 5-50nm before recombination occurs depending on material and structure, while the average thickness of an OSC is 50-100nm, thus the architecture of the active layer is of much importance. Instead of using a bi-layer of n-type and p-type semiconductors, OSCs use the bulk hetero-junction (BHJ), which is a blend with A-D regions that are within the estimated diffusion length.  
 	
-	
+A newer type of organic-inorganic blend solar cell which has gained a lot  attention is the perovskite solar cell (PSC). This solar cell has a novel active layer comprised of organometallic molecules which exhibit the perovskite crystal structure ABX3. The most commonly used perovskite material is methylamoniumm lead trihalide (CH3NH3PbX3, MAPX), where lead can be swapped for tin, and halides such as boron, iodine, and chlorine are employed. Fabrication of the perovskite solar cell is highly attractive as it can be accomplished with wet chemistry, roll to roll printing, or vapor deposition. Some key features of the perovskite structure is that the bandgap of the material is tunable via the halide content and that the diffusion length of holes and electrons is ~1 micron, making them perfect for roll to roll thin film printing. The Shockley–Queisser limit is about 31 percent under an AM1.5G solar spectrum at 1000W/m2, for a Perovskite bandgap of 1.55 eV, which is near the theoretical maximum of 33.7 percent, and reports of perovskite cells with PCE as high as 22 percent have already been fabricated. As a newer material there is still much unknown about the physics of the perovskite solar cell, such as if charges occur as bound excitons or free charges.
 
-	Space transport involves high doses of radiation, large fluctuations of temperatures, and extreme vacuum conditions. The need to study the effects of a space like environment on organic electronic devices is paramount as advances in the organic semiconductor field continue and space exploration becomes more standard. The effect of cosmic ray bombardment on perovskite cells is of particular interest as the crystal morphology may be affected. 
+INCLUDE PARAGRAPH COVERING A-SILICON CELLS
+
+	Space transport involves high doses of radiation, large fluctuations of temperatures, and extreme vacuum conditions. The need to study the effects of a space like environment on organic electronic devices is paramount as advances in the organic semiconductor field continue and space exploration becomes more standard. In this study, we propose to mount four different types of solar cells onto our payload and monitor their performance. We will be using prefabricated small molecule based OSCs, self fabricated polymer based OSCs, self fabricated PSCs, and prefabricated amorphous silicon solar cells. Each of these is a lightweight, flexible, and thin solar cell ideal for space use. The effect of cosmic ray bombardment on perovskite cells is of particular interest as the crystal morphology may be affected.  
+    
+\subsection{Methods}
+    
+    We will be using four different types of solar cells with three panels per cell type, making a total of 12 arrays on board our payload. There will be one type of cell on each of three sides of the payload, 
+
+	Solar cells are characterized by their current vs voltage (IV) curve, which tells you the maximum power point (MPP), Vmax and Imax, open-circuit voltage (Voc) and short circuit current (Isc), leading to the fill factor (FF) and efficiency (PCE). This curve will be  generated using a variable resistor in series with two multimeters, one acting as voltmeter and the other an ammeter, and the solar cell in question, which will follow Ohm's law (1) V=IR. From the plot, Voc is seen when I=0, Isc is when V=0, and the MPP is where Vmax and Imax meet. The MPP can then tell us the efficiecy, which is defined as (2) MPP/Pin. The fill factor gives information on the "squarness" of the IV curve and is defined as (3) FF = MPP/VocIsc, and it is optimal to maximize the fill factor.
+
+    Before flight, every cell will be characterized with IV curves and microscopy, then IV curves will be recorded during flight along with temperature monitoring, and finally after recovery, each cell will be re characterized and once again viewed under the microscope to look for any physics defects. 
+    
+    With the HASP mission, we are going to compare fabricated organic polymer and perovskite solar cells against store bought amorphous silicon solar cells. Each of these cells will be analyzed before, during, and after exposure to the stratosphere. In analyzing our cells, we will measure the open circuit voltage, the short circuit current, then fill factor,  max power point, maximum conversion efficiency, and quantum efficiency.
+    In conjunction with our miniPIX detector, we will be analyzing the effect that cosmic ray bombardment has on our solar cells.  Additionally, we will watch for problems which arise due to UV-A, B, and C rays. We will use AFM after fabrication and after flight to determine effects from cosmics rays
+    
+
+
+Our fabricated polymer cells will be a traditional champion cell of Ag: / 3HT / PCBM / ITO / glass and will be fabricated in house using sputter coating and vapor evaporation.
+
+Our fabricated perovskite cell will use a similar set up as the polymer cell but with ITO / PEDOT:PSS / CH3NH3PbI3-xClx / PC70BM / Ca / Al and will also be fabricated in house.
+
+The amorphous silicon cells will also be purchased from a reasonable location with small enough panels
+\section{Resources}
+\begin{enumerate}
+    \item Solar Energy Materials and Solar Cells 182 (2018) 121–127
+DOI: 10.1016/j.solmat.2018.03.024
+    \item Kaltenbrunner, M. et al. Ultrathin and lightweight organic solar cells with high flexibility. Nat. Commun. 3:770 doi: 10.1038/ncomms1772 (2012)
+\end{enumerate}
+
+
+\end{document}
 
 
 %\subsubsection{Solar Radiation}
